--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
