--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.2",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.2",
-    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-    "swr": "^2.2.5"
+    "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
