--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@mui/icons-material": "^6.1.5",
+    "@paypal/react-paypal-js": "^8.7.0",
     "dotenv": "^16.4.5",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1"
   },
