--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1"
