--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^6.1.5",
     "@paypal/react-paypal-js": "^8.7.0",
     "dotenv": "^16.4.5",
+    "firebase": "^11.6.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
