--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "sharp": "^0.33.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
