--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^11.6.0",
     "next": "14.2.14",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
