--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.6.0",
-    "next": "14.2.14",
+    "next": "^14.2.29",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
